--- a/web/sites/777baby-casino/config/sync/field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_client_type_mobile.yml
+++ b/web/sites/777baby-casino/config/sync/field.field.lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_client_type_mobile.yml
@@ -1,17 +1,17 @@
-uuid: 5e851c56-8d66-4fc5-86fe-4a36962f06d4
-langcode: ja
+uuid: f4f450f8-f5f2-44fa-9a7f-c7e5be73b202
+langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.lucky_baby_desktop_games_entity.field_client_type
+    - field.storage.lucky_baby_desktop_games_entity.field_client_type_mobile
   module:
     - lucky_baby_desktop_games
     - options
-id: lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_client_type
-field_name: field_client_type
+id: lucky_baby_desktop_games_entity.lucky_baby_desktop_games_entity.field_client_type_mobile
+field_name: field_client_type_mobile
 entity_type: lucky_baby_desktop_games_entity
 bundle: lucky_baby_desktop_games_entity
-label: 'Client Type Desktop'
+label: 'Client Type Mobile'
 description: ''
 required: false
 translatable: true
