--- a/web/sites/777baby-casino/config/sync/views.view.games_export.yml
+++ b/web/sites/777baby-casino/config/sync/views.view.games_export.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.lucky_baby_desktop_games_entity.field_client_type
+    - field.storage.lucky_baby_desktop_games_entity.field_client_type_mobile
     - field.storage.lucky_baby_desktop_games_entity.field_enable_free_play
     - field.storage.lucky_baby_desktop_games_entity.field_enable_game
     - field.storage.lucky_baby_desktop_games_entity.field_enable_game_mobile
@@ -612,6 +613,68 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_client_type_mobile:
+          id: field_client_type_mobile
+          table: lucky_baby_desktop_games_entity__field_client_type_mobile
+          field: field_client_type_mobile
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Client Type Mobile'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: list_key
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         field_game_type:
           id: field_game_type
           table: lucky_baby_desktop_games_entity__field_game_type
@@ -1023,6 +1086,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_client_type'
+        - 'config:field.storage.lucky_baby_desktop_games_entity.field_client_type_mobile'
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_enable_free_play'
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_enable_game'
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_enable_game_mobile'
@@ -1078,6 +1142,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_client_type'
+        - 'config:field.storage.lucky_baby_desktop_games_entity.field_client_type_mobile'
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_enable_free_play'
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_enable_game'
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_enable_game_mobile'
@@ -1116,6 +1181,7 @@ display:
         - user.permissions
       tags:
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_client_type'
+        - 'config:field.storage.lucky_baby_desktop_games_entity.field_client_type_mobile'
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_enable_free_play'
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_enable_game'
         - 'config:field.storage.lucky_baby_desktop_games_entity.field_enable_game_mobile'
