--- a/web/sites/777baby-casino/config/sync/views.view.game_list_desktop_v2.yml
+++ b/web/sites/777baby-casino/config/sync/views.view.game_list_desktop_v2.yml
@@ -2991,6 +2991,7 @@ display:
         operator: AND
         groups:
           1: AND
+      enabled: false
     cache_metadata:
       max-age: -1
       contexts:
