Initial commit for video call prioritization menu

--- a/web/sites/msw/config/sync/core.extension.yml
+++ b/web/sites/msw/config/sync/core.extension.yml
@@ -45,6 +45,7 @@ module:
   metatag: 0
   msw_config: 0
   msw_front_blocks: 0
+  msw_prioritization_menu: 0
   msw_terms_of_use: 0
   msw_urls: 0
   node: 0
