--- a/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
+++ b/web/sites/jamboree-casino/config/sync/core.entity_view_display.jamboree_desktop_games_entity.jamboree_desktop_games_entity.default.yml
@@ -8,8 +8,10 @@ dependencies:
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_arcade_game_category
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_arcade_game_filter
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_client_type
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_client_type_mobile
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_free_play
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_game
+    - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_game_mobile
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_external_game_id
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_category
     - field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_game_code
@@ -35,22 +37,6 @@ bundle: jamboree_desktop_games_entity
 mode: default
 content:
   field_all_games_category:
-    weight: 13
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_arcade_game_category:
-    weight: 15
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_arcade_game_filter:
     weight: 16
     label: above
     settings:
@@ -58,15 +44,38 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_arcade_game_category:
+    weight: 18
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_arcade_game_filter:
+    weight: 19
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
   field_client_type:
-    weight: 8
+    weight: 10
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_client_type_mobile:
+    weight: 11
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_enable_free_play:
-    weight: 4
+    weight: 5
     label: above
     settings:
       format: default
@@ -76,7 +85,17 @@ content:
     type: boolean
     region: content
   field_enable_game:
-    weight: 7
+    weight: 8
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_enable_game_mobile:
+    weight: 9
     label: above
     settings:
       format: default
@@ -86,7 +105,7 @@ content:
     type: boolean
     region: content
   field_external_game_id:
-    weight: 20
+    weight: 23
     label: above
     settings:
       link_to_entity: false
@@ -94,7 +113,7 @@ content:
     type: string
     region: content
   field_game_category:
-    weight: 1
+    weight: 2
     label: above
     settings:
       link: true
@@ -102,7 +121,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_code:
-    weight: 5
+    weight: 6
     label: above
     settings:
       link_to_entity: false
@@ -110,7 +129,7 @@ content:
     type: string
     region: content
   field_game_code_icore:
-    weight: 9
+    weight: 12
     label: above
     settings:
       link_to_entity: false
@@ -118,7 +137,7 @@ content:
     type: string
     region: content
   field_game_filter:
-    weight: 11
+    weight: 14
     label: above
     settings:
       link: true
@@ -126,7 +145,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_filter_games:
-    weight: 12
+    weight: 15
     label: above
     settings:
       link: true
@@ -134,7 +153,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_icon_label:
-    weight: 18
+    weight: 21
     label: above
     settings:
       link_to_entity: false
@@ -142,7 +161,7 @@ content:
     type: string
     region: content
   field_game_provider:
-    weight: 10
+    weight: 13
     label: above
     settings:
       link: true
@@ -150,7 +169,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_tag:
-    weight: 6
+    weight: 7
     label: above
     settings:
       link: true
@@ -158,7 +177,7 @@ content:
     type: entity_reference_label
     region: content
   field_game_thumbnail:
-    weight: 3
+    weight: 4
     label: above
     settings:
       image_style: ''
@@ -167,7 +186,7 @@ content:
     type: image
     region: content
   field_game_title:
-    weight: 2
+    weight: 3
     label: above
     settings:
       link_to_entity: false
@@ -175,7 +194,7 @@ content:
     type: string
     region: content
   field_game_title_icon:
-    weight: 17
+    weight: 20
     label: above
     settings:
       image_style: ''
@@ -184,7 +203,7 @@ content:
     type: image
     region: content
   field_game_type:
-    weight: 14
+    weight: 17
     label: above
     settings:
       link: true
@@ -192,7 +211,7 @@ content:
     type: entity_reference_label
     region: content
   field_provider_product:
-    weight: 19
+    weight: 22
     label: above
     settings:
       link: true
@@ -202,7 +221,7 @@ content:
   name:
     label: above
     type: string
-    weight: -4
+    weight: 0
     region: content
     settings:
       link_to_entity: false
@@ -210,7 +229,7 @@ content:
   user_id:
     label: hidden
     type: author
-    weight: 0
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
