--- a/web/sites/jamboree-casino/config/sync/field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_client_type_mobile.yml
+++ b/web/sites/jamboree-casino/config/sync/field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_client_type_mobile.yml
@@ -1,17 +1,17 @@
-uuid: 70052831-7115-4ca7-9300-e9bbddd5b9a0
-langcode: ja
+uuid: 565a82cb-2ca9-463a-bf02-5af0c016f0f6
+langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.jamboree_desktop_games_entity.field_client_type
+    - field.storage.jamboree_desktop_games_entity.field_client_type_mobile
   module:
     - jamboree_desktop_games
     - options
-id: jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_client_type
-field_name: field_client_type
+id: jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_client_type_mobile
+field_name: field_client_type_mobile
 entity_type: jamboree_desktop_games_entity
 bundle: jamboree_desktop_games_entity
-label: 'Client Type Desktop'
+label: 'Client Type Mobile'
 description: ''
 required: false
 translatable: true
