--- a/web/sites/jamboree-casino/config/sync/field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_game_mobile.yml
+++ b/web/sites/jamboree-casino/config/sync/field.field.jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_game_mobile.yml
@@ -1,22 +1,22 @@
-uuid: 8011c64b-6aea-4bea-999f-3247a483d82a
-langcode: ja
+uuid: 85888d74-ae76-4c8c-b4f1-4e250622a3aa
+langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.jamboree_desktop_games_entity.field_enable_game
+    - field.storage.jamboree_desktop_games_entity.field_enable_game_mobile
   module:
     - jamboree_desktop_games
-id: jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_game
-field_name: field_enable_game
+id: jamboree_desktop_games_entity.jamboree_desktop_games_entity.field_enable_game_mobile
+field_name: field_enable_game_mobile
 entity_type: jamboree_desktop_games_entity
 bundle: jamboree_desktop_games_entity
-label: 'Enable Game Desktop'
+label: 'Enable Game Mobile'
 description: ''
 required: false
 translatable: true
 default_value:
   -
-    value: 1
+    value: 0
 default_value_callback: ''
 settings:
   on_label: 'On'
