--- a/web/sites/jamboree-casino/config/sync/views.view.game_list.yml
+++ b/web/sites/jamboree-casino/config/sync/views.view.game_list.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.jamboree_desktop_games_entity.field_enable_free_play
     - field.storage.jamboree_desktop_games_entity.field_enable_game
+    - field.storage.jamboree_desktop_games_entity.field_enable_game_mobile
     - field.storage.jamboree_desktop_games_entity.field_game_category
     - field.storage.jamboree_desktop_games_entity.field_game_code
     - field.storage.jamboree_desktop_games_entity.field_game_provider
@@ -18,6 +19,7 @@ dependencies:
     - rest
     - serialization
     - taxonomy
+    - views_bulk_operations
     - webcomposer_rest_extra
 id: game_list
 label: 'Game List (Desktop)'
@@ -225,6 +227,70 @@ display:
       path: admin/structure/jamboree_desktop_games_entity
       display_description: ''
       fields:
+        views_bulk_operations_bulk_form:
+          id: views_bulk_operations_bulk_form
+          table: views
+          field: views_bulk_operations_bulk_form
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Views bulk operations'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          batch: true
+          batch_size: 50
+          form_step: true
+          buttons: false
+          clear_on_exposed: false
+          action_title: Action
+          selected_actions:
+            views_bulk_edit: views_bulk_edit
+            views_bulk_operations_delete_entity: 0
+            pathauto_update_alias: 0
+            'entity:save_action:jamboree_desktop_games_entity': 0
+          preconfiguration:
+            views_bulk_edit:
+              label_override: ''
+              get_bundles_from_results: 1
+          plugin_id: views_bulk_operations_bulk_form
         field_enable_game:
           id: field_enable_game
           table: jamboree_desktop_games_entity__field_enable_game
@@ -233,6 +299,71 @@ display:
           group_type: group
           admin_label: ''
           label: Enabled
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: boolean
+          settings:
+            format: unicode-yes-no
+            format_custom_true: ''
+            format_custom_false: ''
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+        field_enable_game_mobile:
+          id: field_enable_game_mobile
+          table: jamboree_desktop_games_entity__field_enable_game_mobile
+          field: field_enable_game_mobile
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Enable Game Mobile'
           exclude: false
           alter:
             alter_text: false
@@ -958,45 +1089,6 @@ display:
           hierarchy: false
           error_message: true
           plugin_id: taxonomy_index_tid
-        field_enable_game_value:
-          id: field_enable_game_value
-          table: jamboree_desktop_games_entity__field_enable_game
-          field: field_enable_game_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: '='
-          value: All
-          group: 1
-          exposed: true
-          expose:
-            operator_id: ''
-            label: Enabled
-            description: ''
-            use_operator: false
-            operator: field_enable_game_value_op
-            identifier: field_enable_game_value
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              e: '0'
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          plugin_id: boolean
         field_enable_free_play_value:
           id: field_enable_free_play_value
           table: jamboree_desktop_games_entity__field_enable_free_play
@@ -1023,6 +1115,86 @@ display:
               anonymous: '0'
               administrator: '0'
               e: '0'
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
+        field_enable_game_value:
+          id: field_enable_game_value
+          table: jamboree_desktop_games_entity__field_enable_game
+          field: field_enable_game_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: All
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: 'Enable Game Desktop'
+            description: ''
+            use_operator: false
+            operator: field_enable_game_value_op
+            identifier: field_enable_game_value
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+              access_management: '0'
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin_id: boolean
+        field_enable_game_mobile_value:
+          id: field_enable_game_mobile_value
+          table: jamboree_desktop_games_entity__field_enable_game_mobile
+          field: field_enable_game_mobile_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: All
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: 'Enable Game Mobile'
+            description: ''
+            use_operator: false
+            operator: field_enable_game_mobile_value_op
+            identifier: field_enable_game_mobile_value
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              e: '0'
+              access_management: '0'
           is_grouped: false
           group_info:
             label: ''
@@ -1102,7 +1274,7 @@ display:
             offset_label: Offset
           quantity: 9
     cache_metadata:
-      max-age: -1
+      max-age: 0
       contexts:
         - 'languages:language_interface'
         - url
@@ -1111,6 +1283,7 @@ display:
       tags:
         - 'config:field.storage.jamboree_desktop_games_entity.field_enable_free_play'
         - 'config:field.storage.jamboree_desktop_games_entity.field_enable_game'
+        - 'config:field.storage.jamboree_desktop_games_entity.field_enable_game_mobile'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_category'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_code'
         - 'config:field.storage.jamboree_desktop_games_entity.field_game_provider'
