--- a/web/sites/msw/config/sync/field.field.msw_prioritization_menu.msw_prioritization_menu.field_menu_icon.yml
+++ b/web/sites/msw/config/sync/field.field.msw_prioritization_menu.msw_prioritization_menu.field_menu_icon.yml
@@ -12,7 +12,7 @@ field_name: field_menu_icon
 entity_type: msw_prioritization_menu
 bundle: msw_prioritization_menu
 label: 'Menu Icon'
-description: ''
+description: 'Maximum of 100x100 pixels SVG image'
 required: true
 translatable: false
 default_value: {  }
@@ -23,7 +23,7 @@ settings:
   max_filesize: ''
   max_resolution: ''
   min_resolution: ''
-  alt_field: true
+  alt_field: false
   alt_field_required: false
   title_field: false
   title_field_required: false
