--- a/web/sites/nextbet/config/sync/webcomposer_config.icore_games_integration.yml
+++ b/web/sites/nextbet/config/sync/webcomposer_config.icore_games_integration.yml
@@ -103,7 +103,7 @@ safari_notif:
 value: null
 format: null
 jsystem_currency: "RMB\r\nUSD\r\nMYR\r\nTHB\r\nKRW\r\nVND\r\nIDR\r\nINR\r\nEUR"
-jsystem_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nko|ko-KR\r\nvn|vn\r\nid|id\r\nin|en-US"
+jsystem_language_mapping: "en|en-US\r\nsc|zh-CN\r\nth|th\r\nvn|vi\r\nid|id\r\nkr|ko-KR\r\nin|en-US"
 jsystem_country: ''
 fghub_gaming_currency: ''
 fghub_gaming_language_mapping: ''
