PACIFIC-250added provider alias

--- a/web/sites/777baby-casino/config/sync/views.view.game_list_v3.yml
+++ b/web/sites/777baby-casino/config/sync/views.view.game_list_v3.yml
@@ -1362,7 +1362,7 @@ display:
               alias: ''
               raw_output: false
             field_game_provider_export_1:
-              alias: ''
+              alias: provider
               raw_output: false
             field_provider_product_export:
               alias: provider_product
