disable old view and updated views v3

--- a/web/sites/jamboree-casino/config/sync/views.view.game_list.yml
+++ b/web/sites/jamboree-casino/config/sync/views.view.game_list.yml
@@ -1273,6 +1273,7 @@ display:
             offset: false
             offset_label: Offset
           quantity: 9
+      enabled: false
     cache_metadata:
       max-age: 0
       contexts:
@@ -1459,6 +1460,7 @@ display:
           required: true
           plugin_id: standard
       rendering_language: '***LANGUAGE_language_interface***'
+      enabled: true
     cache_metadata:
       max-age: -1
       contexts:
