--- a/web/sites/jamboree-casino/config/sync/views.view.game_list_desktop_.yml
+++ b/web/sites/jamboree-casino/config/sync/views.view.game_list_desktop_.yml
@@ -1887,6 +1887,7 @@ display:
           required: true
           plugin_id: standard
       group_by: false
+      enabled: false
     cache_metadata:
       max-age: -1
       contexts:
