[WEBSITE-4048] DF MOB EPG fix pageload config

--- a/web/modules/custom/webcomposer_settings/config/install/webcomposer_settings.admin_page_entity_blocks_settings.yml
+++ b/web/modules/custom/webcomposer_settings/config/install/webcomposer_settings.admin_page_entity_blocks_settings.yml
@@ -64,6 +64,7 @@ webcomposer_config_schema__form_menu_links___webcomposer_config_schema__admin_fo
 webcomposer_config_schema__form_menu_links___webcomposer_config_schema__admin_form_promotion_configuration_form_menu: 0
 webcomposer_config_schema__form_menu_links___webcomposer_config_schema__admin_form_webcomposer_settings_entity_settings_menu: 0
 webcomposer_config_schema__form_menu_links___webcomposer_config_schema__admin_form_webcomposer_settings_form_fields_filter_settings_menu: 0
+webcomposer_config_schema__form_menu_links___webcomposer_config_schema__admin_form_webcomposer_config_pageload_menu: 0
 webcomposer_dm__list: 0
 webcomposer_domain_import__webcomposer_domain_import: 0
 webcomposer_domain_import__webcomposer_domain_export: 0
